[package]
name = "simct"
version = "0.1.0"
authors = ["1crcbl <1crcbl@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Approximate nearest neighbour search with cover tree"
repository = "https://github.com/1crcbl/simct-rs"

keywords = ["cover", "tree", "nearest", "neighbor", "search", "parallel"]
categories = ["algorithms", "data-structures", "science"]

[dependencies]
ndarray = { version = "0.14.0", features = ["rayon"] }
ndarray-stats = { version = "0.4.0"}
ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
rayon = "1.5.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
hdf5 = "0.7.1"
oorandom = "11.1.3"
clap = "2.33.3"